<resources>
    <string name="app_name">Learning_Android_CallApp_Kulakov</string>
    <string name="accept_call">Accept call</string>
    <string name="decline_call">Decline call</string>

    <string name="ringing">Ringing…</string>
    <string name="dialing">Dialing…</string>
    <string name="active">Active</string>
    <string name="hanging_up">Hanging up</string>

    <string name="phone">Phone</string>
    <string name="contacts">Contacts</string>

    <string name="dialpad">Dialpad</string>
    <string name="backspace">Backspace</string>

    <string name="call_log_title_with_counter">%s (%d)</string>

    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <string name="add_contact">Add contact</string>
    <string name="no_calls_with_this_contact">No calls with this contact</string>
    <string name="contact_name">Contact name</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>

    <string name="choose_from_camera">Choose from camera</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="select_option">Select option</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="given_name">Given name</string>
    <string name="family_name">Family name</string>
    <string name="middle_name">Middle name</string>
    <string-array name="get_photo_options">
        <item>Choose from camera</item>
        <item>Choose from gallery</item>
    </string-array>
    <string name="copied_text">Copied: %s</string>
    <string name="scan_qr">Scan QR</string>
</resources>